--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -1,3 +1,10 @@
+#logo {
+	background: url('img/LAJI_FI_valk_onlylogo.png') no-repeat 50%;
+	height: 35px;
+	width: 200px;
+	display: inline-block;
+	margin-right: 180px;
+}
 .checklistTable tr:nth-child(even) {
 	background-color: #eee;
 }
