--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -12,15 +12,30 @@
 	padding: 5px;
 }
 
+label.longtext {
+	display: block;
+}
+
 label { 
 	display: inline-block;
 	width: 155px;
 }
+#editTaxonDescriptions label {
+	width: auto;
+	padding-right: 1em;
+}
 select, input, textarea {
 	width: 185px;
 }
+#editTaxonDescriptions input {
+	width: 400px;
+}
 textarea {
 	height: 3em;
+}
+textarea.longtext {
+	width: 650px;
+	height: 180px;
 }
 input[type="submit"] {
 	width: auto;
