--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -138,7 +138,7 @@ tr.errorMessage td {
 	display: inline-block;
 }
 
-#taxonEditHeader button {
+#taxonEditHeader button, #taxonEditHeader .button {
 	font-size: 0.8em;
 	padding: 0.2em;
 	padding-left: 1em;
