--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -14,6 +14,7 @@
 
 label.longtext {
 	display: block;
+	margin-top: 1em;
 }
 
 label { 
@@ -34,8 +35,8 @@ textarea {
 	height: 3em;
 }
 textarea.longtext {
-	width: 550px;
-	height: 90px;
+	width: 800px;
+	height: 250px;
 }
 input[type="submit"] {
 	width: auto;
@@ -162,8 +163,3 @@ tr.errorMessage td {
 	width: 100%;
 }
 
-.jqte {
-	margin: 0.5em;
-	border-style: none;
-	white-space: normal;
-}
