--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -287,7 +287,7 @@ div.taxonWithTools.ui-draggable {
 }
 
 .synonyms .checklistChangesMidTree {
-	display: none;
+	color: inherit;
 }
 
 div.taxonInfo .vernacularNameFI {
