--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -142,7 +142,8 @@ div.taxonChilds {
 	border: 1px dotted grey;
 	border-radius: 5px;
 	background-color: rgb(220,240,255);
-	padding: 5px;
+	padding: 0;
+	margin: 1px;
 	display: inline-block;
 	vertical-align: top;
 	text-align: left;
