--- a/static/iucn.css
+++ b/static/iucn.css
@@ -2,7 +2,7 @@
   max-width: none;
 }
 
-.stat {
+.stat, .state {
   font-weight: bold;
   min-width: 30px;
   display: inline-block;
@@ -16,7 +16,7 @@
   color: blue;
 }
 
-.resourceListTable {
+.resourceListTable, .iucnSpeciesTable {
   border-collapse: collapse;
 }
 .resourceListTable td {
@@ -26,4 +26,33 @@
 .resourceListTable .stat {
   padding-left: 5px;
   padding-right: 5px;
+}
+
+
+.iucnSpeciesTable td:nth-child(4),
+.iucnSpeciesTable td:nth-child(5),
+.iucnSpeciesTable td:nth-child(6),
+.iucnSpeciesTable td:nth-child(7)
+ {
+  text-align: center;
+}
+
+.iucnSpeciesTable th {
+  background-color: rgb(174,208,234);
+}
+.iucnSpeciesTable tr:nth-child(even) td {
+  background-color: #eee;
+}
+.iucnSpeciesTable td:nth-child(1),
+.iucnSpeciesTable td:nth-child(2) {
+  min-width: 140px;
+}
+.state .ready {
+  color: green;
+}
+.state .started {
+  color: rgb(99,117,133);
+}
+.state {
+  color: rgb(199,217,233);
 }
