iucn lajisivulle linkki

--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -9,6 +9,11 @@
 	font-size: 11px;
 }
 
+.speciesName {
+	font-style: italic;
+	white-space: nowrap;
+}
+
 #toolbox {
 	position: fixed;
 	top: 35px;
