--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -14,6 +14,14 @@
 	white-space: nowrap;
 }
 
+.author {
+	display: inline-block;
+	max-width: 150px;
+	font-size: 10px;
+	padding-left: 7px;
+	padding-right: 7px;
+}
+
 #toolbox {
 	position: fixed;
 	top: 35px;
