--- a/static/iucn.css
+++ b/static/iucn.css
@@ -16,10 +16,10 @@
   color: blue;
 }
 
-.resourceListTable, .iucnSpeciesTable {
+.resourceListTable, .iucnSpeciesTable, .evaluationEdit {
   border-collapse: collapse;
 }
-.resourceListTable td {
+.resourceListTable td, .evaluationEdit td {
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -37,7 +37,7 @@
   text-align: center;
 }
 
-.iucnSpeciesTable th, .iucnSpeciesTable td {
+.iucnSpeciesTable th, .iucnSpeciesTable td, .evaluationEdit td {
   padding: 3px;
   padding-right: 5px;
   padding-left: 5px;
@@ -73,4 +73,17 @@
 }
 .goBack:before {
   content: "«";
+}
+.taxonTree {
+  width: 300px;
+}
+.taxonTree .vernacularName {
+  float: right;
+  display: inline-block;
+}
+
+.taxonInfo {
+  display: block;
+  float: left;
+  margin: 1em;
 }
