--- a/static/iucn.css
+++ b/static/iucn.css
@@ -29,7 +29,26 @@
   padding-left: 5px;
   padding-right: 5px;
 }
+.evaluationEdit th, 
+.evaluationEdit td {
+  background-color: white;
+}
+.evaluationEdit tr.section th {
+  padding-top: 30px;
+}
+.evaluationEdit tr.section span {
+  font-style: italic;
+  font-size: 80%;
+}
 
+.evaluationEdit th {
+  background-color: rgb(244,248,255);
+  font-size: 90%;
+}
+.evaluationEdit tbody th:nth-child(1) {
+  max-width: 200px;
+  font-weight: normal;
+}
 
 .iucnSpeciesTable td:nth-child(4),
 .iucnSpeciesTable td:nth-child(5),
