habitatPair clone toteutettu

--- a/static/iucn.css
+++ b/static/iucn.css
@@ -236,3 +236,11 @@ h2 a, h2 a:visited, h2 a:hover { color: inherit; }
 label {
 	cursor: default !important;
 }
+.habitatPair > * {
+	display: block;
+	margin-bottom: 5px;
+}
+
+.habitatPair {
+	margin-bottom: 1em;
+}
