--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -91,6 +91,9 @@ label {
 select, input {
 	width: 185px;
 }
+#groupForm select {
+	width: 400px;
+}
 #editTaxonDescriptions input {
 	width: 400px;
 }
@@ -232,3 +235,21 @@ tr.errorMessage td {
 	padding: 0.6em;
 	font-size: 1.2em;
 }
+
+
+.indent {display: inline-block; }
+.indent_0 { display: none; }
+.indent_1 { padding-left: 20px; }
+.indent_2 { padding-left: 40px; }
+.indent_3 { padding-left: 60px; }
+.indent_4 { padding-left: 80px; }
+.indent_5 { padding-left: 100px; }
+.indent_6 { padding-left: 120px; }
+.indent_7 { padding-left: 140px; }
+
+.informalGroupsTable td {
+	max-width: 300px;
+}
+
+
+
