--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -238,18 +238,30 @@ tr.errorMessage td {
 
 
 .indent {display: inline-block; }
-.indent_0 { display: none; }
+.indent_0 { padding-top: 20px; padding-bottom: 5px; }
 .indent_1 { padding-left: 20px; }
-.indent_2 { padding-left: 40px; }
-.indent_3 { padding-left: 60px; }
+.indent_2 { padding-left: 50px; }
+.indent_3 { padding-left: 70px; }
 .indent_4 { padding-left: 80px; }
-.indent_5 { padding-left: 100px; }
+.indent_5 { padding-left: 110px; }
 .indent_6 { padding-left: 120px; }
-.indent_7 { padding-left: 140px; }
+.indent_7 { padding-left: 150px; }
 
 .informalGroupsTable td {
 	max-width: 300px;
+	padding-bottom: 0px;
+	padding-top: 0px;
+	white-space: nowrap;
+	overflow: hidden;
+	font-size: 90%;
 }
+
+.informalGroupsTable .ui-button-text {
+	padding-top: 1px;
+	padding-bottom: 1px;
+	font-size: 9px;
+}
+
 
 
 
