--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -236,17 +236,6 @@ tr.errorMessage td {
 	font-size: 1.2em;
 }
 
-
-.indent {display: inline-block; }
-.indent_0 { padding-top: 20px; padding-bottom: 5px; }
-.indent_1 { padding-left: 20px; }
-.indent_2 { padding-left: 50px; }
-.indent_3 { padding-left: 70px; }
-.indent_4 { padding-left: 80px; }
-.indent_5 { padding-left: 110px; }
-.indent_6 { padding-left: 120px; }
-.indent_7 { padding-left: 150px; }
-
 .informalGroupsTable td {
 	max-width: 300px;
 	padding-bottom: 0px;
@@ -256,11 +245,32 @@ tr.errorMessage td {
 	font-size: 90%;
 }
 
+.informalGroupsTable tr:nth-child(2n) {
+	background-color: inherit;
+}
+
+.informalGroupsTable {
+	border-collapse: collapse;
+}
+
+.informalGroupsTable tr.even { background-color: #eee !important; }
+
+span.indent {display: inline-block; }
+.indent_0 td { padding-top: 20px; padding-bottom: 5px; }
+.indent_1 span.indent { padding-left: 20px; }
+.indent_2 span.indent { padding-left: 50px; }
+.indent_3 span.indent { padding-left: 70px; }
+.indent_4 span.indent { padding-left: 80px; }
+.indent_5 span.indent { padding-left: 110px; }
+.indent_6 span.indent { padding-left: 120px; }
+.indent_7 span.indent { padding-left: 150px; }
+
 .informalGroupsTable .ui-button-text {
 	padding-top: 1px;
 	padding-bottom: 1px;
 	font-size: 9px;
 }
+
 
 
 
