muokattavaksi: aka names, tradenames, administrative statuses, secure levels

--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -271,7 +271,11 @@ span.indent { display: inline-block; }
 	font-size: 9px;
 }
 
-
+.inheritedGroups li {
+  max-width: 350px;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 
 
