--- a/static/iucn.css
+++ b/static/iucn.css
@@ -1,3 +1,13 @@
+.successMessage {
+	background-color: rgb(200,250,200);
+	font-color: rgb(50,100,50);
+}
+.errorMessage {
+	display: block;
+	background-color: rgb(250,200,200);
+	font-color: rgb(50,100,50);
+}
+
 input.validationError {
 	background-color: rgb(250,200,200);
 }
