--- a/static/iucn.css
+++ b/static/iucn.css
@@ -48,28 +48,32 @@ input.validationError {
 .evaluationEdit td {
   background-color: white;
 }
-.evaluationEdit {
-  border: 1px solid #ccc;
-}
+
 .evaluationEdit .section label {
   padding-top: 30px;
   text-align: left;
   font-weight: bold !important;
 }
+
 .evaluationEdit th span {
   font-style: italic;
   font-size: 80%;
 }
-
+.evaluationEdit .section th {
+	background-color: white;
+	border-bottom: 3px solid #AED0EA;
+}
 .evaluationEdit th {
-  background-color: rgb(244,248,255);
   font-size: 90%;
 }
+.evaluationEdit th, .evaluationEdit td {
+	border-bottom: 1px solid #ccc;
+}
+
 .evaluationEdit tbody th:nth-child(1) {
   max-width: 200px;
   font-weight: normal;
   text-align: left;
-  border-bottom: 1px solid #ccc;
 }
 
 
@@ -81,17 +85,13 @@ input.validationError {
   text-align: center;
 }
 
-.iucnSpeciesTable th, .iucnSpeciesTable td, .evaluationEdit td {
+.iucnSpeciesTable th, .iucnSpeciesTable td {
   padding: 3px;
   padding-right: 5px;
   padding-left: 5px;
   border: 1px solid #ddd;
   border-bottom: 1px solid grey;
  }
- 
-.evaluationEdit td {
-  border: 1px solid #ddd;
-}
  
 .iucnSpeciesTable th {
   background-color: rgb(174,208,234);
