uhanalaisuuden syy ja uhkatekijät: järjestys säilytettävä; jos jonkin arvioinnin lataus epäonnistuu, skipataan se, virheiden ilmoitus errorreporterilla ja jatketaan; string -> qname muutoksia

--- a/static/iucn.css
+++ b/static/iucn.css
@@ -229,7 +229,7 @@ input.validationError {
   width: 650px;
 }
 
-button.add {
+button.add, .addHabitatPair {
   color: green;
   font-size: 10px;
 }
