--- a/static/iucn.css
+++ b/static/iucn.css
@@ -313,7 +313,7 @@ div#evaluationMeta {
 }
 
 .widgetTools {
-  width: 500px;
+  max-width: 90em;
   margin: 1em;
   margin-bottom: 3em;
 }
@@ -325,4 +325,11 @@ tr.criteriaRow > * {
 }
 tr.criteriaStatusRow > td {
 	padding-bottom: 40px;
+}
+#remarksField {
+  height: 10em;
+  width: 80em;
+}
+.ui-tooltip {
+    white-space: pre-line;
 }
