--- a/static/iucn.css
+++ b/static/iucn.css
@@ -330,6 +330,13 @@ tr.criteriaStatusRow > td {
   height: 10em;
   width: 80em;
 }
+li.remark {
+  display: block;
+  border: 1px solid rgb(221,221,221);
+  border-radius: 5px;
+  margin: 1em;
+  padding: 1em;
+}
 .ui-tooltip {
     white-space: pre-line;
 }
