--- a/static/iucn.css
+++ b/static/iucn.css
@@ -336,6 +336,13 @@ li.remark {
   border-radius: 5px;
   margin: 1em;
   padding: 1em;
+  position: relative;
+}
+li.remark button.delete {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 80%;
 }
 .ui-tooltip {
     white-space: pre-line;
