--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -190,13 +190,19 @@ div.sortingControls button {
 	position: fixed;
 	top: 0;
 	left: 0;
-	right: 0;
-	bottom: 0;
 	display: none;
-	z-index: 0;
+	z-index: 98;
+	background-color: grey;
+	opacity: 0.8;
+	height: 100%;
+	width: 100%;
+	text-align: center;
+    padding-top: 100px;
+    color: white;
+    font-size: 5em;
 }
 .aboveGreyOutElement {
-	z-index: 1;
+	z-index: 99;
 	position: relative;
 }
 div.taxonDropArea {
