--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -220,7 +220,26 @@ div.taxonDropArea {
 }
 .synonyms div.taxonDropArea p {
   margin: 0;
-  line-height: 1.4em;
+  line-height: 2em;
+}
+div.ui-draggable-dragging {
+	visibility: hidden;
+}
+div.ui-draggable-dragging .taxonInfo {
+	visibility: visible;
+} 
+div.taxonDropArea.ui-droppable {
+	opacity: 0.3;
+}
+div.taxonDropArea.ui-droppable.ui-state-hover {
+	opacity: 1;
+	background: rgb(200,255,200);
+}
+div.taxonDropArea.ui-droppable.ui-state-active {
+	opacity: 1;
+	background: rgb(150,255,150);
+	color: green;
+	border: 1px solid green;
 }
 .ui-sortable .taxonWithTools {
 	cursor: ns-resize;
