--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -86,6 +86,8 @@ label {
 #editTaxonDescriptions label {
 	width: auto;
 	padding-right: 1em;
+	margin-top: 1em;
+	margin-bottom: 0.5em;
 }
 select, input {
 	width: 185px;
@@ -233,11 +235,16 @@ tr.errorMessage td {
 	width: 100%;
 }
 
+#editTaxonDescriptions {
+  padding-bottom: 10em;
+}
+
 #editTaxonDescriptions .portlet {
-	width: 600px;
+	width: 800px;
 	dislay: inline-block;
-	float: left;
+	margin: 2em;
 } 
+
 #editTaxonDescriptions .portlet-header {
 	padding: 0.6em;
 	font-size: 1.2em;
@@ -284,3 +291,17 @@ span.indent { display: inline-block; }
   white-space: nowrap;
   overflow: hidden;
 }
+
+#loadsUglyBlocker {
+  position: absolute;
+  background-color: red;
+  height: 100%;
+  width: 100%;
+  z-index: 999;
+  background-color: white;
+  text-align: center;
+  padding-top: 100px;
+  color: grey;
+  font-size: 5em;
+}
+
