notes ja year biogeog. esiintymiseen

--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -308,3 +308,10 @@ span.indent { display: inline-block; }
 #modifyCitation input {
   width: 600px;
 }
+
+#biogeographicalProvinceTable .notes {
+  width: 320px;
+}
+#biogeographicalProvinceTable .year {
+  width: 40px;
+}
