--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -315,3 +315,7 @@ span.indent { display: inline-block; }
 #biogeographicalProvinceTable .year {
   width: 40px;
 }
+
+img.finnishTaxonFlag {
+	width: 15px;
+}
