--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -108,10 +108,12 @@ div.taxonChilds {
 	vertical-align: top;
 	text-align: left;
 }
+.taxonInfo {
+  cursor: pointer;
+}
 div.taxonWithTools {
 	display: inline-block;
 	margin: 2px;
-	cursor: pointer;
 }
 div.synonyms {
 	display: inline-block;
