--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -287,7 +287,7 @@ div.loading {
 #rootTree {
     position: absolute;
     top: 10px;
-	width: 250px;
+	max-width: 500px;
 }
 .rootTreeNode a {
 	text-decoration: underline;
@@ -302,7 +302,8 @@ div.loading {
 	content: "»";
 }
 
-#splitTaxonDialog input {
+#splitTaxonDialog input, 
+#mergeTaxonDialog input {
   width: 150px;
 }
 
