red list statukset näkyviin taxon edit puolella

--- a/static/taxonomy.css
+++ b/static/taxonomy.css
@@ -337,3 +337,8 @@ span.indent { display: inline-block; }
 img.finnishTaxonFlag {
 	width: 15px;
 }
+
+table.redListTable th, table.redListTable td {
+	padding: 2px;
+	padding-right: 5px;
+}
