--- a/static/taxonTrees.css
+++ b/static/taxonTrees.css
@@ -111,14 +111,25 @@ div.taxonChilds {
 .taxonInfo {
   cursor: pointer;
 }
+
+
 div.taxonWithTools:hover {
-	background-color: rgba(255,255,255,0.2);
+	background-color: rgba(100,100,200,0.09);
+	border-bottom: 1px solid rgb(180, 180, 185);
 }
 div.taxonWithTools {
 	display: block;
 	margin: 2px;
 	border-bottom: 1px solid rgb(210, 210, 215);
 }
+.synonyms .taxonWithTools {
+	display: inline-block;
+	border-bottom: none;
+}
+.synonyms .taxonWithTools:hover {
+	border-bottom: none;
+}
+
 div.taxonWithTools > * {
 	vertical-align: top;
 }
@@ -134,10 +145,7 @@ div.synonyms > * {
 .addSynonymButton {
 	margin-top: 4px;
 }
-.synonyms .taxonWithTools {
-	display: inline-block;
-	border-bottom: none;
-}
+
 div.synonymSection {
 	display: inline-block;
 }
